@@ -1,4 +1,10 @@
 #! /usr/bin/env python2
+
+# This file is part of khmer, http://github.com/ged-lab/khmer/, and is
+# Copyright (C) Michigan State University, 2013-2015. It is licensed under
+# the three-clause BSD license; see doc/LICENSE.txt.
+# Contact: khmer-project@idyll.org
+
 """
 Error correct reads based on a counting hash from a diginorm step.
 Output sequences will be put in @@@.
